--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,19 +10,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
-        >
+        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
         <activity
-            android:name=".Sorting"
+            android:name=".TeacherList"
             android:exported="false" />
         <activity
-            android:name=".Storing"
+            android:name=".RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainChats"
             android:exported="false" />
         <activity
             android:name=".Loginok"
-            android:exported="false" />
-        <activity
-            android:name=".Filestore"
             android:exported="false" />
         <activity
             android:name=".Dbact"
