--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,8 @@
         android:label="DriveUp"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
-        <activity
-            android:name=".GeminiActivity"
-            android:exported="false" />
+        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
+        >
         <activity
             android:name=".ChatActivity"
             android:exported="false" />
